[package]
name = "line-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
fern = "0.6.2"
log = "0.4.21"
rmp-serde = "1.3.0"
serde = "1.0.202"
tokio = {version="1.37.0", features=["full"]}
uuid ={version="1.8.0", features=["v4"]}
